refactor: docker build with builder