@@ -1,4 +1,19 @@
-FROM python:3.11-slim
+FROM ubuntu:24.04 as dependencies
+
+# install dependencies
+RUN  apt-get update \
+  && apt-get upgrade -y \
+  && apt-get install -y \
+  xvfb \
+  libxtst6 \
+  libxrender1 \
+  x11-utils \
+  socat \
+  procps \
+  xterm
+
+
+FROM eclipse-temurin:21 as ibgw
 # IBC Version : https://github.com/IbcAlpha/IBC/releases
 ARG IBC_VER="3.18.0"
 ARG IBC_ASSET_URL="https://github.com/IbcAlpha/IBC/releases/download/3.18.0-Update.1/IBCLinux-3.18.0.zip"
@@ -10,26 +25,15 @@ RUN  apt-get update \
   && apt-get upgrade -y \
   && apt-get install -y wget \
   unzip \
-  xvfb \
-  libxtst6 \
-  libxrender1 \
   build-essential \
   net-tools \
-  x11-utils \
-  socat \
-  expect \
-  procps \
-  xterm
-RUN apt install -y openjdk-17-jre
+  expect
 
 # set environment variables
 ENV TWS_INSTALL_LOG=/root/Jts/tws_install.log \
     IBC_INI=/root/ibc/config.ini \
     IBC_PATH=/opt/ibc \
-    javaPath=/opt/i4j_jres \
     TWS_PATH=/root/Jts \
-    twsSettingsPath=/root/Jts \
-    TWOFA_TIMEOUT_ACTION=restart \
     IB_GATEWAY_MAJOR=${IB_GATEWAY_MAJOR} \
     IB_GATEWAY_MINOR=${IB_GATEWAY_MINOR} 
 
@@ -54,8 +58,32 @@ RUN /tmp/install_ibgw.exp
 # remove downloaded files
 RUN rm /tmp/ibgw.sh /tmp/IBC.zip
 
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules java.base \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
 # copy IBC/Jts configs
 COPY ibc/config.ini ${IBC_INI}
+
+FROM ubuntu:24.04
+
+ENV TWS_INSTALL_LOG=/root/Jts/tws_install.log
+ENV IBC_INI=/root/ibc/config.ini
+ENV IBC_PATH=/opt/ibc
+ENV TWS_PATH=/root/Jts
+ENV TWOFA_TIMEOUT_ACTION=restart
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=ibgw /javaruntime $JAVA_HOME
+
+COPY --from=dependencies / /
+COPY --from=ibgw /opt/ibc /opt/ibc
+COPY --from=ibgw /root/Jts /root/Jts
 
 # install healthcheck tool
 ADD healthcheck/healthcheck/build/distributions/healthcheck.tar /
@@ -63,8 +91,8 @@ ENV PATH="${PATH}:/healthcheck/bin"
 
 # copy cmd script
 WORKDIR /root
-COPY cmd.sh /root/cmd.sh
-RUN chmod +x /root/cmd.sh
+COPY start.sh /root/start.sh
+RUN chmod +x /root/start.sh
 
 # set display environment variable (must be set after TWS installation)
 ENV DISPLAY=:0
@@ -73,4 +101,4 @@ ENV IBGW_PORT 4002
 
 EXPOSE $IBGW_PORT
 
-ENTRYPOINT [ "sh", "/root/cmd.sh" ] 
+ENTRYPOINT [ "sh", "/root/start.sh" ] 
